# WebSearcher

./: CMakeLists.txt
app/: CMakeLists.txt
app/inc/: ProgressBarWorker.hpp  data_item.hpp  provider.hpp  qml_cpp_bridge.hpp  qobject_list_model.hpp  search_manager.hpp  search_worker.hpp
app/src/: DataItemDelegate.qml  ProgressBarWorker.cpp  data_item.cpp  main.cpp  main.qml  provider.cpp  qml.qrc  qml_cpp_bridge.cpp  search_manager.cpp  search_worker.cpp
cmake/: curl-download.cmake  curl.cmake
core/: CMakeLists.txt
core/inc/: Dispatcher.hpp  ThreadPool.hpp  UrlLoadTask.hpp  WebSite.hpp
core/src/: Dispatcher.cpp  ThreadPool.cpp  UrlLoadTask.cpp  WebSite.cpp
